@@ -1,3 +1,7 @@
+ext3grep-0.4.1
+
+	Fix compile problem with EXTERNAL_BLOCK=0
+
 ext3grep-0.4.0
 
 	Address the problem where two dir entries have the same name but different inode numbers.
